Scaled down the pom.xml. Now works on home computer.